k8s_deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: nimbus-github-bot
  labels:
    app: nimbus-github-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nimbus-github-bot
  template:
    metadata:
      labels:
        app: nimbus-github-bot
    spec:
      nodeSelector:
        tier: backend
      containers:
      - name: nimbus-github-bot
        image: jasonb87/nimbus-github-bot:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 1
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 128Mi
        ports:
        - containerPort: 8000
      volumes:
      - name: nimbus-github-bot-secret
        secret:
          secretName: nimbus-github-bot-secret
      - name: nimbus-github-bot-config
        configMap:
          name: nimbus-github-bot-config
---
kind: Service
apiVersion: v1
metadata:
  name: nimbus-github-bot
spec:
  selector:
    app: nimbus-github-bot
  ports:
  - protocol: TCP
    port: 8000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nimbus-github-bot
  annotations:
    ingress.kubernetes.io/force-hsts: "true"
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/hsts-max-age: "31536000"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nimbus-github-bot
          servicePort: 8000
        path: /github/webhook/bot
